# Bruxos-do-VFX-Nodes

./: BERNINI_BdVFX_Remover.json  MM_Upscale_Bruxos.json  MM_Upscale_Bruxos_face.json  README.md  RELATORIO_MM_Upscale.md  __init__.py  banner.py  bernini_tiled.py  bruxos_showtext.js  bruxos_upload.js  bruxos_video_preview.js  download_models.py  facefusion_nodes.py  index.html  install.sh  loaders.py  mask_bbox_preview.py  mocha_nodes.py  nodes.py  points_editor.py  prompt_guide.py  pyproject.toml  requirements.txt  simplifier_nodes.py  tile_nodes.py  timing_nodes.py  tracking_export.py  tracking_nodes.py  tracking_visualizer.py  utility_nodes.py  video_compare.py  video_nodes.py  wan_tiled.py
Bernini_workflow_BruxosdoVFX/: 02_BdVFX_face_swap_1x1_centerface.json  BERNINI_BdVFX_Remover.json  BERNINI_BdVFX_Upscale_Tiled.json  BERNINI_face_swap_1x1_centerface.json  BruxosDoVFX_FaceStitch.json
InstallEasy/: bruxos_runpod_setup.sh  bruxos_setup_windows.bat  instalar_deps_tracking.bat  instalar_deps_tracking.sh  instalar_modelos_tracking.bat  instalar_modelos_tracking.py  install.bat  install.sh
facefusion/: filtro.py
facefusion/content_filter/: content_filter.py
facefusion/engine/: __init__.py  runtime.py  utils.py
facefusion/engine/detection/: detector.py
facefusion/engine/models/: occluder.py  parser.py  swapper.py
web/: bruxos_node_timer.js  bruxos_points_editor.js  bruxos_showtext.js  bruxos_upload.js  bruxos_video_compare.js  bruxos_video_preview.js
