[project]
name = "ComfyUI-Bruxos-do-VFX"
description = "Custom nodes by Bruxos do VFX: Bernini long video, face upscale stitch, 4n+1 fix, Qwen caption, and native video load/save."
version = "0.10.0"
license = { text = "MIT" }

[tool.comfy]
PublisherId = "bruxos-do-vfx"
DisplayName = "ComfyUI Bruxos do VFX"
Icon = ""
