[project]
name = "ComfyUI-Bruxos-do-VFX"
description = "Custom nodes by Bruxos do VFX: Bernini long video, face upscale stitch, 4n+1 fix, Qwen caption, native video load/save, and local FaceFusion face swap (ONNX)."
version = "0.12.0"
license = { text = "MIT" }
dependencies = ["onnxruntime-gpu", "opencv-python", "onnx", "requests", "tqdm"]

[tool.comfy]
PublisherId = "bruxos-do-vfx"
DisplayName = "ComfyUI Bruxos do VFX"
Icon = ""
